benchmark/deploy/istio-1.13.4/istio-test/gateway-edge-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: edge-gateway
  namespace: horsecoder-test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: edge-gateway
  namespace: horsecoder-test
spec:
  hosts:
    - "*"
  gateways:
    - edge-gateway
  http:
    - match:
        - uri:
            prefix: /edge-gateway/
      route:
        - destination:
            host: edge-gateway-svc
            port:
              number: 31808
      rewrite:
        uri: /
