benchmark/deploy/istio-1.13.4/istio-test/istio-test-storage.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-test-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test
spec:
  hosts:
    - "*"
  gateways:
    - istio-test-gateway
  http:
    - match:
        - uri:
            prefix: /storage/
      route:
        - destination:
            host: istio-horsecoder-storage-svc
            port:
              number: 10104
      rewrite:
        uri: /
